Chat box create us gemeni

--- a/Serrvices.html
+++ b/Serrvices.html
@@ -8,7 +8,21 @@
 <body>
     <h1 style="text-align:center;">Exercise List</h1>
     <div class="container" id="exerciseContainer"></div>
-    
+
+<div class="services">
+    <div class="service">
+        <h2>Web Development</h2>
+        <p>We provide modern web development services using the latest technologies.</p>
+    </div>
+    <div class="service">
+        <h2>Mobile App Development</h2>
+        <p>Our team creates user-friendly mobile applications for both Android and iOS platforms.</p>
+    </div>
+    <div class="service">
+        <h2>SEO Optimization</h2>
+        <p>Improve your website's visibility on search engines with our SEO services.</p>
+    </div>
+</div>
 
     <link rel="stylesheet" href="service.css">
     <script src="app.js"></script>
