--- a/chat.html
+++ b/chat.html
@@ -64,6 +64,7 @@
         </form>
     </div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/markdown-it/8.2.2/markdown-it.min.js"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=TKz3riHo"></script>
     <script src="chat.js"></script>
 </body>
 </html>
