create the nav bar

--- a/DashBoard.html
+++ b/DashBoard.html
@@ -8,6 +8,20 @@
    <link rel="stylesheet" href="dashbaord.css">
 </head>
 <body>
+    <Header class="header">
+        <a href="#home" class="logo">SAL
+            Wellness360</a>
+
+        <div class='bx-bx' id="menu_icon"></div>
+        <ul class="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Serrvices.html">Exercise List</a></li>
+            <li><a href="DashBoard.html">DashBoard</a></li>
+            <li><a href="chat.html">Fitnnerse Chat</a></li>
+            <li><a href="food.html">foods Dashboard</a></li>
+        </ul>
+       
+    </Header>
 
     <div class="container">
         <h1 class="text-center mb-4">Personal Fitness Dashboard</h1>
@@ -47,7 +61,7 @@
             </div>
         </div>
 
-        <!-- Display User Info -->
+     
         <div class="card" id="user-info-card" style="display:none;">
             <div class="card-header">
                 <h4>Your Fitness Info</h4>
