--- a/Serrvices.html
+++ b/Serrvices.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+
+    <Header class="header">
+        <a href="#home" class="logo">SAL
+            Wellness360</a>
+
+        <div class='bx-bx' id="menu_icon"></div>
+        <ul class="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Serrvices.html">Exercise List</a></li>
+            <li><a href="DashBoard.html">DashBoard</a></li>
+            <li><a href="chat.html">Fitnnerse Chat</a></li>
+            <li><a href="food.html">foods Dashboard</a></li>
+        </ul>
+       
+    </Header>
 </head>
 <body>
     <h1 style="text-align:center;">Exercise List</h1>
