--- a/food.html
+++ b/food.html
@@ -8,6 +8,20 @@
     
 </head>
 <body>
+    <Header class="header">
+        <a href="#home" class="logo">SAL
+            Wellness360</a>
+
+        <div class='bx-bx' id="menu_icon"></div>
+        <ul class="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Serrvices.html">Exercise List</a></li>
+            <li><a href="DashBoard.html">DashBoard</a></li>
+            <li><a href="chat.html">Fitnnerse Chat</a></li>
+            <li><a href="food.html">foods Dashboard</a></li>
+        </ul>
+       
+    </Header>
 
 <div class="container">
     <h1>Food Intake Tracker</h1>
