Add workout duration to log and improve local storage handling; clean up HTML and CSS

--- a/DashBoard.html
+++ b/DashBoard.html
@@ -111,10 +111,11 @@
                             <th>Workout Type</th>
                             <th>Duration (minutes)</th>
                             <th>Calories Burned</th>
+                            <th>.workoutDuration</th>
                         </tr>
                     </thead>
                     <tbody id="workout-log-body">
-                        <!-- Workout entries will go here -->
+                      
                     </tbody>
                 </table>
             </div>
